--- a/index.htm
+++ b/index.htm
@@ -235,7 +235,7 @@
                 <div class="col-lg-6">
 
                     <div class="progress">
-                        <span class="skill"><span>PHP</span> <i class="val">98%</i></span>
+                        <span class="skill"><span>Laravel / PHP</span> <i class="val">98%</i></span>
                         <div class="progress-bar-wrap">
                             <div class="progress-bar" role="progressbar" aria-valuenow="98" aria-valuemin="0"
                                  aria-valuemax="100"></div>
@@ -243,7 +243,7 @@
                     </div>
 
                     <div class="progress">
-                        <span class="skill"><span>C#</span> <i class="val">80%</i></span>
+                        <span class="skill"><span>ASP.Net Core 8 / C#</span> <i class="val">80%</i></span>
                         <div class="progress-bar-wrap">
                             <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
                                  aria-valuemax="100"></div>
@@ -251,7 +251,7 @@
                     </div>
 
                     <div class="progress">
-                        <span class="skill"><span>DartJs</span> <i class="val">80%</i></span>
+                        <span class="skill"><span>Flutter / DartJs</span> <i class="val">80%</i></span>
                         <div class="progress-bar-wrap">
                             <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
                                  aria-valuemax="100"></div>
@@ -259,33 +259,9 @@
                     </div>
 
                     <div class="progress">
-                        <span class="skill"><span>SQL</span> <i class="val">95%</i></span>
+                        <span class="skill"><span>MYSQL / MSSQL / SQL</span> <i class="val">95%</i></span>
                         <div class="progress-bar-wrap">
                             <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0"
-                                 aria-valuemax="100"></div>
-                        </div>
-                    </div>
-
-                    <div class="progress">
-                        <span class="skill"><span>HTML</span> <i class="val">100%</i></span>
-                        <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0"
-                                 aria-valuemax="100"></div>
-                        </div>
-                    </div>
-
-                    <div class="progress">
-                        <span class="skill"><span>CSS</span> <i class="val">100%</i></span>
-                        <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0"
-                                 aria-valuemax="100"></div>
-                        </div>
-                    </div>
-
-                    <div class="progress">
-                        <span class="skill"><span>JavaScript</span> <i class="val">97%</i></span>
-                        <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="97" aria-valuemin="0"
                                  aria-valuemax="100"></div>
                         </div>
                     </div>
@@ -293,30 +269,6 @@
                 </div>
 
                 <div class="col-lg-6">
-
-                    <div class="progress">
-                        <span class="skill"><span>Laravel</span> <i class="val">95%</i></span>
-                        <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0"
-                                 aria-valuemax="100"></div>
-                        </div>
-                    </div>
-
-                    <div class="progress">
-                        <span class="skill"><span>ASP.NET Core 8</span> <i class="val">80%</i></span>
-                        <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
-                                 aria-valuemax="100"></div>
-                        </div>
-                    </div>
-
-                    <div class="progress">
-                        <span class="skill"><span>Flutter</span> <i class="val">80%</i></span>
-                        <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0"
-                                 aria-valuemax="100"></div>
-                        </div>
-                    </div>
 
                     <div class="progress">
                         <span class="skill"><span>Bootstrap</span> <i class="val">91%</i></span>
@@ -327,28 +279,36 @@
                     </div>
 
                     <div class="progress">
-                        <span class="skill"><span>WordPress/CMS</span> <i class="val">85%</i></span>
+                        <span class="skill"><span>HTML / CSS</span> <i class="val">100%</i></span>
                         <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0"
+                            <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0"
                                  aria-valuemax="100"></div>
                         </div>
                     </div>
 
                     <div class="progress">
-                        <span class="skill"><span>Git</span> <i class="val">87%</i></span>
+                        <span class="skill"><span>Js / JQuery</span> <i class="val">97%</i></span>
                         <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="87" aria-valuemin="0"
+                            <div class="progress-bar" role="progressbar" aria-valuenow="97" aria-valuemin="0"
                                  aria-valuemax="100"></div>
                         </div>
                     </div>
 
-                    <div class="progress">
-                        <span class="skill"><span>Photoshop</span> <i class="val">75%</i></span>
-                        <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0"
-                                 aria-valuemax="100"></div>
-                        </div>
-                    </div><!-- End Skills Item -->
+<!--                    <div class="progress">-->
+<!--                        <span class="skill"><span>WordPress/CMS</span> <i class="val">85%</i></span>-->
+<!--                        <div class="progress-bar-wrap">-->
+<!--                            <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0"-->
+<!--                                 aria-valuemax="100"></div>-->
+<!--                        </div>-->
+<!--                    </div>-->
+
+<!--                    <div class="progress">-->
+<!--                        <span class="skill"><span>Git</span> <i class="val">87%</i></span>-->
+<!--                        <div class="progress-bar-wrap">-->
+<!--                            <div class="progress-bar" role="progressbar" aria-valuenow="87" aria-valuemin="0"-->
+<!--                                 aria-valuemax="100"></div>-->
+<!--                        </div>-->
+<!--                    </div>-->
 
                 </div>
 
@@ -570,7 +530,7 @@
                             <div class="portfolio-info">
                                 <h4>WEBSITE</h4>
                                 <p>In-house coffee ordering site - Pakshoma Group (Alef Holding)</p>
-                                <a href="imgs/cafe.png" title="Branding 1"
+                                <a href="imgs/cafe.png"
                                    data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i
                                         class="bi bi-zoom-in"></i></a>
                                 <a href="https://cafe.alef.life"
@@ -586,7 +546,7 @@
                             <div class="portfolio-info">
                                 <h4>WEBSITE</h4>
                                 <p>Off-Road Landing Page - Pakshoma Group (Alef Holding)</p>
-                                <a href="imgs/offroad.png" title="Branding 1"
+                                <a href="imgs/offroad.png"
                                    data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i
                                         class="bi bi-zoom-in"></i></a>
                                 <a href="https://pakshoma.com/old/offroad"
@@ -602,7 +562,7 @@
                             <div class="portfolio-info">
                                 <h4>WEBSITE</h4>
                                 <p>Refah Kala Landing Page - Pakshoma Group (Alef Holding)</p>
-                                <a href="imgs/refahkala.png" title="Branding 1" data-gallery="portfolio-gallery-book"
+                                <a href="imgs/refahkala.png" data-gallery="portfolio-gallery-book"
                                    class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                                 <a href="https://pakshoma.com/old/refahkala"
                                    title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
@@ -617,7 +577,7 @@
                             <div class="portfolio-info">
                                 <h4>WEBSITE</h4>
                                 <p>Spring 1403 Landing Page - Pakshoma Group (Alef Holding)</p>
-                                <a href="imgs/spring.png" title="App 2" data-gallery="portfolio-gallery-app"
+                                <a href="imgs/spring.png" data-gallery="portfolio-gallery-app"
                                    class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                                 <a href="https://pakshoma.com/old/spring1403"
                                    title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
@@ -633,7 +593,7 @@
                             <div class="portfolio-info">
                                 <h4>WEBSITE</h4>
                                 <p>Remodeling HN main Website</p>
-                                <a href="imgs/remodelinghn.png" title="Product 1" data-gallery="portfolio-gallery-product"
+                                <a href="imgs/remodelinghn.png" data-gallery="portfolio-gallery-product"
                                    class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                                 <a href="https://remodelinghn.com"
                                    title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
@@ -648,7 +608,7 @@
                             <div class="portfolio-info">
                                 <h4></h4>
                                 <p>Asteria FZ .Co, Main Website (Alef Holding)</p>
-                                <a href="imgs/asteria.png" title="App 1" data-gallery="portfolio-gallery-app"
+                                <a href="imgs/asteria.png" data-gallery="portfolio-gallery-app"
                                    class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                             </div>
                         </div>
@@ -662,7 +622,7 @@
                             <div class="portfolio-info">
                                 <h4>Personal Project (App)</h4>
                                 <p>Ghazi Bartar (Karagah Online) - a Game for who like Crime Stories - (Under Construction)</p>
-                                <a href="imgs/karagah02.jpg" title="Product 2" data-gallery="portfolio-gallery-product"
+                                <a href="imgs/karagah02.jpg" data-gallery="portfolio-gallery-product"
                                    class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                             </div>
                         </div>
@@ -675,7 +635,7 @@
                             <div class="portfolio-info">
                                 <h4>Personal Project (App)</h4>
                                 <p>Astiazh Bar - 2017 Flutter Framework</p>
-                                <a href="imgs/astiazh02.jpg" title="Branding 2"
+                                <a href="imgs/astiazh02.jpg"
                                    data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i
                                         class="bi bi-zoom-in"></i></a>
                             </div>
@@ -689,7 +649,7 @@
                             <div class="portfolio-info">
                                 <h4>Personal Project (App)</h4>
                                 <p>Romance novel story - 2016 (JAVA)</p>
-                                <a href="imgs/zemestanDaq02.jpg" title="Branding 2" data-gallery="portfolio-gallery-book"
+                                <a href="imgs/zemestanDaq02.jpg" data-gallery="portfolio-gallery-book"
                                    class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                             </div>
                         </div>
@@ -702,7 +662,7 @@
                             <div class="portfolio-info">
                                 <h4>Personal Project (App)</h4>
                                 <p>Religious application, Ramadan prayers - 2016 (JAVA)</p>
-                                <a href="imgs/ramezan02.jpg" title="App 3" data-gallery="portfolio-gallery-app"
+                                <a href="imgs/ramezan02.jpg" data-gallery="portfolio-gallery-app"
                                    class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                             </div>
                         </div>
@@ -715,7 +675,7 @@
                             <div class="portfolio-info">
                                 <h4>Personal Project (App)</h4>
                                 <p>Fashion, clothing and advice on how to look good - 2016 Eclipse Framework</p>
-                                <a href="imgs/classicPoosh02.jpg" title="Product 3" data-gallery="portfolio-gallery-product"
+                                <a href="imgs/classicPoosh02.jpg" data-gallery="portfolio-gallery-product"
                                    class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                             </div>
                         </div>
