+ Social Media Links changed

--- a/index.htm
+++ b/index.htm
@@ -47,14 +47,14 @@
     </span>
 
     <div class="social-links text-center">
-        <a href="https://bootstrapmade.com/content/demo/iPortfolio/#" class="twitter"><i
+        <a href="https://x.com" class="twitter" target="_blank"><i
                 class="bi bi-twitter-x"></i></a>
-        <a href="https://bootstrapmade.com/content/demo/iPortfolio/#" class="facebook"><i
+        <a href="https://facebook.com" class="facebook" target="_blank"><i
                 class="bi bi-facebook"></i></a>
-        <a href="https://bootstrapmade.com/content/demo/iPortfolio/#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="https://bootstrapmade.com/content/demo/iPortfolio/#" class="google-plus"><i
-                class="bi bi-skype"></i></a>
-        <a href="https://bootstrapmade.com/content/demo/iPortfolio/#" class="linkedin"><i
+        <a href="https://instagram.com/mr.sjdbn" class="instagram" target="_blank"><i class="bi bi-instagram"></i></a>
+        <a href="https://teams.live.com/l/invite/FEA_3doOQmvCD9S2AE" class="google-plus" target="_blank"><i
+                class="bi bi-microsoft-teams"></i></a>
+        <a href="https://www.linkedin.com/in/sajjad-b-bb4930224/" class="linkedin" target="_blank"><i
                 class="bi bi-linkedin"></i></a>
     </div>
 
@@ -147,7 +147,7 @@
                                 <li><i class="bi bi-chevron-right"></i> <strong>Github:</strong>
                                     <a href="https://github.com/sajjadbandezadeh" target="_blank">Link</a></li>
                                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong>
-                                    <span>09905117588</span></li>
+                                    <span>Send an email for more information.</span></li>
                                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong>
                                     <span>Tehran, Iran</span></li>
                             </ul>
@@ -680,38 +680,6 @@
                             </div>
                         </div>
                     </div><!-- End Portfolio Item -->
-
-<!--                    <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-branding"-->
-<!--                         style="position: absolute; left: 440px; top: 1008px; height: 300px;">-->
-<!--                        <div class="portfolio-content h-100">-->
-<!--                            <img src="img/branding-3.jpg" class="img-fluid" alt="">-->
-<!--                            <div class="portfolio-info">-->
-<!--                                <h4>Branding 3</h4>-->
-<!--                                <p>Lorem ipsum, dolor sit amet consectetur</p>-->
-<!--                                <a href="img/branding-3.jpg" title="Branding 2"-->
-<!--                                   data-gallery="portfolio-gallery-branding" class="glightbox preview-link"><i-->
-<!--                                        class="bi bi-zoom-in"></i></a>-->
-<!--                                <a href="https://bootstrapmade.com/content/demo/iPortfolio/portfolio-details.html"-->
-<!--                                   title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>&lt;!&ndash; End Portfolio Item &ndash;&gt;-->
-
-<!--                    <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-books"-->
-<!--                         style="position: absolute; left: 880px; top: 1008px; height: 300px;">-->
-<!--                        <div class="portfolio-content h-100">-->
-<!--                            <img src="img/books-3.jpg" class="img-fluid" alt="">-->
-<!--                            <div class="portfolio-info">-->
-<!--                                <h4>Books 3</h4>-->
-<!--                                <p>Lorem ipsum, dolor sit amet consectetur</p>-->
-<!--                                <a href="img/books-3.jpg" title="Branding 3" data-gallery="portfolio-gallery-book"-->
-<!--                                   class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>-->
-<!--                                <a href="https://bootstrapmade.com/content/demo/iPortfolio/portfolio-details.html"-->
-<!--                                   title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                    </div>&lt;!&ndash; End Portfolio Item &ndash;&gt;-->
-
                 </div><!-- End Portfolio Container -->
             </div>
         </div>
@@ -1013,10 +981,6 @@
                 <span>All Rights Reserved</span></p>
         </div>
         <div class="credits">
-            <!-- All the links in the footer should remain intact. -->
-            <!-- You can delete the links only if you've purchased the pro version. -->
-            <!-- Licensing information: https://bootstrapmade.com/license/ -->
-            <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
             Made by Sajjad Bandezadeh</a>
         </div>
     </div>
