+ Ebcore Document Added

--- a/index.htm
+++ b/index.htm
@@ -806,12 +806,12 @@
                         <div class="testimonial-item">
                             <p>
                                 <i class="bi bi-quote quote-icon-left"></i>
-                                <span>Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.</span>
+                                <span>I worked with Sajjad Bandezadah on a team for about two years. During this time, Sajjad always proved himself with creativity, perseverance, and high accuracy in carrying out his responsibilities.</span>
                                 <i class="bi bi-quote quote-icon-right"></i>
                             </p>
-                            <img src="img/testimonials-4.jpg" class="testimonial-img" alt="">
-                            <h3>Matt Brandon</h3>
-                            <h4>Freelancer</h4>
+                            <img src="imgs/amirhossein-kamalzade.jpg" class="testimonial-img" alt="">
+                            <h3>Amirhossein kamalzadeh</h3>
+                            <h4>Flutter Developer</h4>
                         </div>
                     </div><!-- End testimonial item -->
 
@@ -842,6 +842,7 @@
                             <h4>Ceo &amp; Founder</h4>
                         </div>
                     </div>
+
                     <div class="swiper-slide swiper-slide-next" role="group" aria-label="2 / 5"
                          data-swiper-slide-index="1" style="width: 431.333px; margin-right: 1px;">
                         <div class="testimonial-item">
@@ -855,6 +856,7 @@
                             <h4>Designer</h4>
                         </div>
                     </div>
+
                     <div class="swiper-slide" role="group" aria-label="3 / 5" data-swiper-slide-index="2"
                          style="width: 431.333px; margin-right: 1px;">
                         <div class="testimonial-item">
@@ -868,6 +870,7 @@
                             <h4>Store Owner</h4>
                         </div>
                     </div>
+
                 </div>
                 <div class="swiper-pagination swiper-pagination-clickable swiper-pagination-bullets swiper-pagination-horizontal">
                     <span class="swiper-pagination-bullet swiper-pagination-bullet-active" tabindex="0" role="button"
