+ Middleware Anchor tag Fixed

--- a/portfolio/ebcore/index.html
+++ b/portfolio/ebcore/index.html
@@ -72,7 +72,7 @@
             <a href="docs/index.html#routes" class="hover-target">Routes</a>
         </li>
         <li class="case-study-name">
-            <a href="docs/index.html#middlewares" class="hover-target">Middlewares</a>
+            <a href="docs/index.html#middleware" class="hover-target">Middlewares</a>
         </li>
         <li class="case-study-name">
             <a href="docs/index.html#events" class="hover-target">Events</a>
