--- a/portfolio/ebcore/index.html
+++ b/portfolio/ebcore/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div style="position: absolute; left: 0;top: 0; padding:3px; border-radius: 7px; background-color: black;color: #dbc3ff; font-size: 10px; margin: 4px">
-    version 1.0.0 (latest release)
+    version 1.0.4 (lastest release)
 </div>
 <div class="shadow-title parallax-top-shadow">Ebcore</div>
 <div class="section-parallax parallax-00"
